# changepoint-doctor

./: .gitignore  .readthedocs.yaml  README.md  SECURITY.md
.beads/: issues.jsonl
.github/scripts/: audit_gate.py  benchmark_gate.py  coverage_gate.py  crates_publish.py  schema_gate.py
.github/scripts/tests/: test_audit_gate.py  test_benchmark_gate.py  test_coverage_gate.py  test_crates_publish.py  test_schema_gate.py
.github/workflows/: benchmark-gate.yml  dependency-security.yml  docs.yml  nightly-quality.yml  pr-checks.yml  release.yml  wheel-build.yml  wheel-smoke.yml
.plans/: CP_2.docx  codex_plan.v3.md  codex_plan.v4.md  codex_plan.v5.md  initial_codex_plan.md  initial_codex_plan.v2.md  prompts.md
cpd/: CITATION.cff  Cargo.toml  LICENSE-MIT  NOTICE  VERSIONING.md  deny.toml
cpd/benchmarks/: mvp_a_benchmark_manifest.json  mvp_a_reference_baseline.json  student_t_robustness_manifest.v1.json
cpd/crates/cpd-bench/: Cargo.toml
cpd/crates/cpd-bench/benches/: cost_l2.rs  cost_multivariate.rs  cost_student_t_robustness.rs  numerics_prefix.rs  offline_binseg.rs  offline_pelt.rs  offline_segneigh.rs
cpd/crates/cpd-cli/: Cargo.toml
cpd/crates/cpd-cli/src/: main.rs
cpd/crates/cpd-core/: Cargo.toml
cpd/crates/cpd-core/src/: constraints.rs  detectors.rs  error.rs  execution_context.rs  lib.rs  missing.rs  numerics.rs  observability.rs  results.rs  schema_migration.rs  stopping.rs  time_series.rs
cpd/crates/cpd-costs/: Cargo.toml
cpd/crates/cpd-costs/proptest-regressions/tests/: proptest_invariants.txt
cpd/crates/cpd-costs/src/: ar.rs  bernoulli.rs  l1.rs  l2.rs  lib.rs  model.rs  nig.rs  normal.rs  poisson.rs  student_t.rs
cpd/crates/cpd-costs/tests/: multivariate_v1.rs  proptest_invariants.rs  student_t_robustness.rs
cpd/crates/cpd-doctor/: Cargo.toml
cpd/crates/cpd-doctor/src/: diagnostics.rs  lib.rs  recommendation.rs
cpd/crates/cpd-doctor/tests/: ensemble_integration.rs
cpd/crates/cpd-eval/: Cargo.toml
cpd/crates/cpd-eval/datasets/: registry_manifest.v1.json
cpd/crates/cpd-eval/src/: datasets.rs  lib.rs  synthetic.rs
cpd/crates/cpd-offline/: Cargo.toml
cpd/crates/cpd-offline/proptest-regressions/tests/: proptest_invariants.txt
cpd/crates/cpd-offline/src/: binseg.rs  dynp.rs  kernel.rs  lib.rs  pelt.rs  schema_migration.rs  wbs.rs  window.rs
cpd/crates/cpd-offline/tests/: proptest_invariants.rs  segneigh_integration.rs
cpd/crates/cpd-online/: Cargo.toml
cpd/crates/cpd-online/src/: baseline.rs  bocpd.rs  checkpoint.rs  lib.rs
cpd/crates/cpd-online/tests/: perf.rs
cpd/crates/cpd-preprocess/: Cargo.toml
cpd/crates/cpd-python/: Cargo.toml
cpd/crates/cpd-python/src/: lib.rs  numpy_interop.rs  result_objects.rs
cpd/crates/cpd-python/tests/fixtures/: offline_result_v1.json
cpd/docs/: benchmark_slos.md  clean_room_policy.md  cli.md  crates_publish.md  fuzzing.md  multivariate_v1.md  python_apple_silicon_toolchain.md  release_security.md  result_json_contract.md  student_t_experimental.md
cpd/fuzz/: Cargo.toml
cpd/fuzz/fuzz_targets/: common.rs  cost_segment_cost_no_panic.rs  numpy_interop_no_panic.rs  offline_detectors_no_panic.rs  online_bocpd_update_no_panic.rs  online_checkpoint_deserialize_no_panic.rs  timeseries_view_no_panic.rs
cpd/python/: QUICKSTART.md  README.md  pyproject.toml
cpd/python/changepoint_doctor/: __init__.py  __init__.pyi
cpd/python/cpd/: __init__.py  __init__.pyi  _cpd_rs.pyi
cpd/python/examples/: csv_detect.py  plot_breakpoints.py  synthetic_signal.py
cpd/python/examples/notebooks/: 01_offline_algorithms.ipynb  02_online_algorithms.ipynb  03_doctor_recommendations.ipynb  README.md
cpd/python/tests/: bocpd_parity_harness.py  test_alias_import.py  test_bocpd_bayesian_parity.py  test_bocpd_bayesian_parity_harness.py  test_docs_path_guardrail.py  test_integration_mvp_a.py  test_optional_extras_contract.py  test_result_schema_contract.py  test_smoke.py  test_streaming_mvp_c.py  test_streaming_perf_contract.py
docs/: changelog.md  conf.py  index.md  references.bib  requirements.txt  troubleshooting.md
docs/_static/: custom.css
docs/api-reference/: diagnostics.md  functions.md  index.md  offline-detectors.md  online-detectors.md  result-types.md
docs/architecture/: crate-hierarchy.md  index.md  rust-usage.md  traits.md
docs/getting-started/: cli.md  index.md  installation.md  quickstart.md
docs/user-guide/: cost-models.md  doctor.md  index.md  offline-algorithms.md  online-algorithms.md  preprocessing.md  reproducibility.md  serialization.md  use-cases.md
