[workspace]
members = [
  "crates/cpd-core",
  "crates/cpd-costs",
  "crates/cpd-preprocess",
  "crates/cpd-offline",
  "crates/cpd-online",
  "crates/cpd-doctor",
  "crates/cpd-python",
  "crates/cpd-cli",
  "crates/cpd-bench",
  "crates/cpd-eval",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["changepoint-doctor contributors"]
rust-version = "1.93"
homepage = "https://github.com/xang1234/changepoint-doctor"
repository = "https://github.com/xang1234/changepoint-doctor"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
pedantic = "allow"

[workspace.metadata.cpd.features]
canonical = [
  "rayon",
  "serde",
  "tracing",
  "simd",
  "kernel",
  "kernel-approx",
  "blas",
  "gp",
  "preprocess",
  "repro-strict",
]
