[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "changepoint-doctor"
dynamic = ["version"]
description = "Fast change-point detection bindings backed by Rust."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "cpd-rs contributors" }]
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/xang1234/changepoint-doctor"
Repository = "https://github.com/xang1234/changepoint-doctor"
Issues = "https://github.com/xang1234/changepoint-doctor/issues"

[tool.maturin]
bindings = "pyo3"
manifest-path = "../crates/cpd-python/Cargo.toml"
module-name = "cpd._cpd_rs"
python-source = "."
features = ["extension-module", "serde"]
