[package]
name = "cpd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and invariants for changepoint detection in cpd-rs."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cpd-core"
keywords = ["changepoint", "time-series", "statistics"]
categories = ["algorithms", "science"]

[lib]
path = "src/lib.rs"

[features]
default = []
rayon = []
serde = ["dep:serde", "dep:serde_json"]
tracing = []
simd = []
kernel = []
kernel-approx = []
blas = []
gp = []
preprocess = []
repro-strict = []

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
