[package]
name = "cpd-costs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cost-model implementations for changepoint detection in cpd-rs."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cpd-costs"
keywords = ["changepoint", "time-series", "statistics"]
categories = ["algorithms", "science"]

[lib]
path = "src/lib.rs"

[features]
default = []
rayon = ["cpd-core/rayon"]
serde = ["cpd-core/serde"]
tracing = ["cpd-core/tracing"]
simd = ["cpd-core/simd"]
kernel = ["cpd-core/kernel"]
kernel-approx = ["cpd-core/kernel-approx"]
blas = ["cpd-core/blas"]
gp = ["cpd-core/gp"]
preprocess = ["cpd-core/preprocess"]
repro-strict = ["cpd-core/repro-strict"]

[dependencies]
cpd-core = { version = "0.1.0", path = "../cpd-core" }

[dev-dependencies]
proptest = "1"
