[package]
name = "cpd-preprocess"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Preprocessing helpers for changepoint detection pipelines in cpd-rs."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cpd-preprocess"
keywords = ["changepoint", "time-series", "statistics"]
categories = ["algorithms", "science"]

[lib]
path = "src/lib.rs"

[features]
default = []
preprocess = ["cpd-core/preprocess"]

[dependencies]
cpd-core = { version = "0.1.0", path = "../cpd-core" }
